<resources>
    <string name="app_name">poke doc</string>
    <string name="credits">pokeapi.co</string>
    <string name="pokemon_name">pokemon name?</string>
    <string name="search">search pokemon</string>
    <string name="show_all">all pokemons</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="attack">attack</string>
    <string name="defense">defense</string>
    <string name="speed">speed</string>
    <string name="abilities">abilities</string>
    <string name="moves">moves</string>
    <string name="hp">hp</string>
    <string name="loading">Searching pokemon in wild...</string>
    <string name="wrong">Pokemon not found. Please type correct name.</string>
    <string name="no_internet">No Internet connection</string>
</resources>
