<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.ambeyindustry.pokedox.InputActivity">
    <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <EditText
                android:id="@+id/searchName"
                android:hint="@string/pokemon_name"
                android:inputType="text"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <Button
                android:id="@+id/searchButton"
                android:background="@color/colorAccentBlue"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="searchPokemon"
                android:layout_gravity="center"
                android:text="@string/search"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <Button
                android:id="@+id/showAllButton"
                android:background="@color/colorAccentBlue"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="listAllPokemons"
                android:layout_gravity="top"
                android:text="@string/show_all"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>
    </LinearLayout>
</LinearLayout>