<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.ambeyindustry.pokedox.InfoActivity">
    <RelativeLayout
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/main"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_name"
                        android:text="Pikachu"
                        android:textSize="25sp"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"/>
                <TextView
                        tools:text="fire, water"
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_types"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"/>
            </LinearLayout>
            <ImageView
                    android:id="@+id/dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/hp"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_hp"
                        tools:text="20hp"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/height"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_height"
                        tools:text="89 ft"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/weight"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_weight"
                        tools:text="114 lbs"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/attack"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_attack"
                        tools:text="300"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/defense"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_defense"
                        tools:text="23"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/speed"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_speed"
                        tools:text="89"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/abilities"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_abilities"
                        tools:text="static, lightening rod, water rod"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                    android:background="@drawable/border"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/moves"
                        android:textSize="16sp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:id="@+id/pokemon_moves"
                        tools:text="Cover, ThunderBolt, Thundershock"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
